--- a/index.html
+++ b/index.html
@@ -2,139 +2,148 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Q3-KLIMENTSII</title>
+
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Urbanist:wght@300&display=swap" rel="stylesheet">
+
+    <title>CV-klimentsii</title>
 </head>
 <body>
-
-    <header>
-        <section class="container">
+    <header class="header">
+        <div class="container">
             <nav class="nav">
-                <a class="nav_link" href="#main">Main</a>
-                <a class="nav_link" href="#me">Me</a>
+                <a class="nav_link" href="#intro">main</a>
+                <a class="nav_link" href="#me">me</a>
                 <a class="nav_link" href="#skills">skills</a>
                 <a class="nav_link" href="#works">works</a>
-                <a class="nav_link" href="#contacts">Contacts</a>
-            </nav>
-        </section>
+                <a class="nav_link" href="#contacts">contacts</a>
+            </nav>   
+        </div> 
     </header>
 
-    <main class="page">
-        <section class="container">
-            <div class="intro" id="main">
-                <div class="intro_inner">
-                    <h1 class="intro_title">
-                        IT'S MY PAGE
-                    </h1>
-                    <h2 class="intro_suptitle">
-                        and my information
-                    </h2>
+    <main class="main">
+        <div class="intro" id="intro">
+            <section class="container">
+                <div class="intro_h">
+                    <h1 class="intro_h1">It's my PAGE</h1>
+                    <h2 class="intro_h2">and my information</h2>
                 </div>
-            </div>
-        </section>
-
-        <section class="container">
-            <div class="me" id="me">
-                <img src="klimentsii.jpg" class="me_photo" alt="">
-                <div class="me_item">
-                    <h2 class="me_title">
-                        Some words about me:
-                    </h2>
-                    <ul class="me_text">
-                        <li> My name is Klimentsii(Климентий). </li>
-                        <li> I'm 19 years old. </li>
-                        <li> I'm a student of MITSO university in Minsk. </li>
-                        <li> I'm a 4th year student of the IT specialty. </li>
-                    </ul>
-                </div>
-            </div>
-        </section> 
-       
-        <section class="container" id="skills">
-            <div class="skills">
-                <h3 class="skills_title">
-                    Now, brifly about my skills
-                </h3>
-                <article class="skills_text">
-                    <ul>
-                        <li> Illustrator </li>
-                        <li> After Effects </li>
-                        <li> Figma </li>
-                        <li> FL Studio (some music :D) </li>
-                        <li> Power Point </li>
-                    </ul>
-                </article>
-                <h3 class="skills_title">
-                    And my languages
-                </h3>
-                <article class="skills_text">
-                    <ul>
-                        <li> SEO (50%) </li>
-                        <li> English (B1) </li>
-                        <li> Html (99%) </li>
-                        <li> Css (80%) </li>
-                        <li> Js (10%) </li>
-                        <li> Java (10%) </li>
-                    </ul>
-                </article>
-            </div>
-        </section>
-
-        <div class="imgaaa">
-            <div class="imgaa">
-                <img src="photo-original'nogo-razmera.jpg" class="imga" alt="Изображение, пропорции которого не искажены">
-            </div>
+            </section>
         </div>
 
-        <section class="container" id="works">
-            <div class="works">
-                <h4 class="works_title">
-                    And now some words about my works
-                </h4>
-                <div class="works_item">
-                    <img class="works_image" src="psklad.jpg">
-                    <div class="works_text">   
-                        Made up the site for "Склад металла", made a logo, developed a design
-                        and promoted to the top using SEO up to 2nd place
-                        <a href="https://psklad.by">psklad</a>             
+        <div class="me_start" id="me">
+            <section class="container">
+                <div class="me">
+                    <div>
+                        <img class="me_photo" src="avatar.jpg" alt="мое фото">
+                    </div>
+                    <div class="me_item">
+                        <h4 class="me_title">
+                            Some words about me:
+                        </h4>
+                        <article>
+                            <ul class="me_text">
+                                <li>My name is Klimentsii(Климентий).</li>
+                                <li>I’m 19 years old.</li>
+                                <li>I’m a student of MITSO university in Minsk.</li>
+                                <li>I’m a 4th year student of the IT specialty.</li>
+                            </ul>
+                        </article>
                     </div>
                 </div>
-                <div class="works_item">
-                    <img class="works_image" src="logodo.jpg">
-                    <div class="works_text">
-                        I made this site for myself(I wanted to do logomaking).
-                        I also took up design and made a logo.
-                        <a href="http://logodo.by">logodo</a>          
+            </section>
+        </div>
+
+        <div class="skills_start" id="skills">
+            <section class="container">
+                <div class="skills">
+                    <div class="skills_item">
+                        <h3 class="skills_title">
+                            Now, brifly about my skills
+                        </h3>
+                        <article>
+                            <ul class="skills_text">
+                                <li class="skills_li">Illustrator</li>
+                                <li class="skills_li">After Effects</li>
+                                <li class="skills_li">Figma</li>
+                                <li class="skills_li">Power Point</li>
+                                <li class="skills_li">FL Studio (some music :D)</li>   
+                            </ul>
+                        </article>
+                    </div>
+                    <div class="skills_item">
+                        <h3 class="skills_title">
+                            And my languages
+                        </h3>
+                        <article>
+                            <ul class="skills_text">
+                                <li class="skills_li">SEO (50%)</li>
+                                <li class="skills_li">English (B1)</li>
+                                <li class="skills_li">Html (99%)</li>
+                                <li class="skills_li">Css (80%)</li>
+                                <li class="skills_li">Js (10%)</li>   
+                                <li class="skills_li">Java (10%)</li> 
+                            </ul>
+                        </article>
                     </div>
                 </div>
-                <div class="works_item">
-                    <img class="works_image" src="traditions.jpg">
-                    <div class="works_text">
-                        Layout, design and logo.I also promoted SEO, but stoped and the site is 
-                        not included in the top
-                        <a href="http://traditions.by">traditions</a>               
+            </section>
+        </div>
+
+        <div class="works_start" id="works">
+            <div class="container">
+                <div class="works">
+                    <div class="works_title">
+                        And now some words about my works
+                    </div>
+                    <div class="works_item">
+                        <a href="https://psklad.by">
+                            <img class="works_photo" src="psklad.jpg" alt="склад металла">
+                        </a>
+                        <div class="works_text">
+                            Made up the site for Sklad Metalla, made a 
+                            logo, developed a design and promoted to the 
+                            top using SEO up to 2nd place
+                        </div>
+                    </div>
+                    <div class="works_item">
+                        <a href="http://logodo.by">
+                            <img class="works_photo" src="logodo.jpg" alt="логоду">
+                        </a>
+                        <div class="works_text">
+                            I made this site for myself(I wanted to do 
+                            logomaking). I also took up design and made 
+                            a logo
+                        </div>
+                    </div>
+                    <div class="works_item">
+                        <a href="http://traditions.by">
+                            <img class="works_photo" src="traditions.jpg" alt="традишнс">
+                        </a>
+                        <div class="works_text">
+                            Layout, design and logo.I also promoted SEO, 
+                            but stoped and the site is not included in
+                            the top
+                        </div>
                     </div>
                 </div>
             </div>
-        </section>
+        </div>
     </main>
 
-    <footer class="foot" id="contacts">
-        <section class="container">
-            <ul class="foot_items">
-                <li><a href="mailto:klimparh@gmail.com" class="nav_link">klimparh@gmail.com</a></li>
-                <li><a href="tel:+375256983664" class="nav_link">+375-25-698-36-64</a></li>
-                <li><a href="https://t.me/klimentsii" class="nav_link">Telegram</a></li>
-                <li><a href="https://www.instagram.com/klimentsii/" class="nav_link" >Instagram</a></li>
-                <li><a href="https://github.com/klimentsii" class="nav_link" >GitHub</a></li>
-                <li><a href="https://app.rs.school/course/student/dashboard?course=js-fe-2021Q3" class="nav_link">
-                    <img width="15%" src="rs.png">
-                </a></li>
-                <li><a class="nav_link">2021</a></li>
-            </ul>
-        </section>
-    </footer>
+    <header class="footer" id="contacts">
+        <div class="container">
+            <nav class="nav">
+                <a class="nav_link" href="mailto:klimparh@gmail.com">klimparh@gmail.com</a>
+                <a class="nav_link" href="tel:+375256983664">+375-25-698-36-64</a>
+                <a class="nav_link" href="https://t.me/klimentsii">Telegram</a>
+                <a class="nav_link" href="https://www.instagram.com/klimentsii/">Instagram</a>
+                <a class="nav_link" href="https://github.com/klimentsii">GitHub</a>
+                <a class="nav_link">2021, made by klimentsii</a>
+            </nav>   
+        </div> 
+    </header>
 </body>
 </html>
