fix: change some files

--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
                         <img class="me_photo" src="avatar.jpg" alt="мое фото">
                     </div>
                     <div class="me_item">
-                        <h4 class="me_title">
+                        <h3 class="me_title">
                             Some words about me:
-                        </h4>
+                        </h3>
                         <article>
                             <ul class="me_text">
-                                <li>My name is Klimentsii(Климентий).</li>
-                                <li>I’m 19 years old.</li>
+                                <li><h4>My name is Klimentsii(Климентий).</h4></li>
+                                <li>I’m 20 years old.</li>
                                 <li>I’m a student of MITSO university in Minsk.</li>
                                 <li>I’m a 4th year student of the IT specialty.</li>
                             </ul>
@@ -65,11 +65,16 @@
                         </h3>
                         <article>
                             <ul class="skills_text">
-                                <li class="skills_li">Illustrator</li>
-                                <li class="skills_li">After Effects</li>
-                                <li class="skills_li">Figma</li>
-                                <li class="skills_li">Power Point</li>
-                                <li class="skills_li">FL Studio (some music :D)</li>   
+                                <li class="skills_li"><h4>Illustrator (80%)</h4></li>
+                                <li class="skills_li">After Effects (50%)</li>
+                                <li class="skills_li">Figma (80%)</li>
+                                <li class="skills_li">Power Point (100%)</li>
+                                <li class="skills_li">Access (80%)</li>  
+                                <li class="skills_li">Excel (90%)</li>
+                                <li class="skills_li">Word (90%)</li>
+                                <li class="skills_li">VScode (70%)</li>
+                                <li class="skills_li">Visual Studio (30%)</li>
+                                <li class="skills_li">FL Studio (some music :D) (100%)</li> 
                             </ul>
                         </article>
                     </div>
@@ -79,12 +84,15 @@
                         </h3>
                         <article>
                             <ul class="skills_text">
-                                <li class="skills_li">SEO (50%)</li>
-                                <li class="skills_li">English (B1)</li>
+                                <li class="skills_li"><h4>SEO (50%)</h4></li>
+                                <li class="skills_li">English (A2)</li>
                                 <li class="skills_li">Html (99%)</li>
                                 <li class="skills_li">Css (80%)</li>
-                                <li class="skills_li">Js (10%)</li>   
+                                <li class="skills_li">Js (30%)</li>   
                                 <li class="skills_li">Java (10%)</li> 
+                                <li class="skills_li">CMD (50%)</li>
+                                <li class="skills_li"></li>
+                                <li class="skills_li"></li>
                             </ul>
                         </article>
                     </div>
@@ -95,11 +103,11 @@
         <div class="works_start" id="works">
             <div class="container">
                 <div class="works">
-                    <div class="works_title">
+                    <h4 class="works_title">
                         And now some words about my works
-                    </div>
+                    </h4>
                     <div class="works_item">
-                        <a href="https://psklad.by">
+                        <a target="_blank" href="https://psklad.by">
                             <img class="works_photo" src="psklad.jpg" alt="склад металла">
                         </a>
                         <div class="works_text">
@@ -109,7 +117,7 @@
                         </div>
                     </div>
                     <div class="works_item">
-                        <a href="http://logodo.by">
+                        <a target="_blank" href="http://logodo.by">
                             <img class="works_photo" src="logodo.jpg" alt="логоду">
                         </a>
                         <div class="works_text">
@@ -119,13 +127,21 @@
                         </div>
                     </div>
                     <div class="works_item">
-                        <a href="http://traditions.by">
+                        <a target="_blank" href="http://traditions.by">
                             <img class="works_photo" src="traditions.jpg" alt="традишнс">
                         </a>
                         <div class="works_text">
                             Layout, design and logo.I also promoted SEO, 
                             but stoped and the site is not included in
                             the top
+                        </div>
+                    </div>
+                    <div class="works_item">
+                        <a target="_blank" href="https://github.com/klimentsii">
+                            <img class="works_photo" src="code.jpg" alt="Пример кода">
+                        </a>
+                        <div class="works_text">
+                            Example of my code
                         </div>
                     </div>
                 </div>
@@ -136,14 +152,22 @@
     <header class="footer" id="contacts">
         <div class="container">
             <nav class="nav">
-                <a class="nav_link" href="mailto:klimparh@gmail.com">klimparh@gmail.com</a>
-                <a class="nav_link" href="tel:+375256983664">+375-25-698-36-64</a>
-                <a class="nav_link" href="https://t.me/klimentsii">Telegram</a>
-                <a class="nav_link" href="https://www.instagram.com/klimentsii/">Instagram</a>
-                <a class="nav_link" href="https://github.com/klimentsii">GitHub</a>
-                <a class="nav_link">2021, made by klimentsii</a>
+                <ul>
+                    <li><a class="foot_link" href="mailto:klimparh@gmail.com">klimparh@gmail.com</a></li>
+                    <li><a class="foot_link" href="tel:+375256983664">+375256983664</a></li>
+                    <li><a class="foot_link" href="https://t.me/klimentsii">Telegram</a></li>
+                    <li><a class="foot_link" href="https://www.instagram.com/klimentsii/">Instagram</a></li>
+                    <li><a class="foot_link" href="https://github.com/klimentsii">GitHub</a></li>
+                    <li><a class="foot_link" href="https://www.linkedin.com/in/klimentsii-parhomchuk-697585205/">LinkedIn</a></li>
+                    <li><a class="foot_link">2021, made by klimentsii</a></li>
+                </ul>
             </nav>   
         </div> 
+        <div class="container">
+            <div class="rs">
+                <a class="foot_link"><img class="foot_photo" src="rs_school.png" alt="Логотип школы"></a>
+            </div>
+        </div>
     </header>
 </body>
 </html>
